feat (validate) : validate BE